--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,10 @@
 /public/build
 /public/hot
 /public/storage
-/storage/*.key
-/storage/pail
+/storage/*
+!/storage/app
+!/storage/app/public
+!/storage/app/public/uploads
 /vendor
 .env.backup
 .env.production
